Java11 cleanup. Remove unused and long-time deprecated code.